--- a/package.json
+++ b/package.json
@@ -1,52 +1,47 @@
 {
   "name": "ali-imran",
-  "homepage": "http://alialfred.github.io/portfolio",
+  "homepage": "https://www.ialiimran.com/",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@steveeeie/react-page-transition": "^1.2.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "bootstrap": "^4.6.0",
-    "emailjs-com": "^2.6.4",
-    "gh-pages": "^3.2.3",
-    "react": "^17.0.1",
-    "react-animated-cursor": "^2.1.8",
-    "react-bootstrap": "^1.4.3",
-    "react-dom": "^17.0.1",
-    "react-helmet-async": "^1.0.7",
-    "react-icons": "^4.1.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-transition-group": "^4.4.2",
-    "typewriter-effect": "^2.18.2",
-    "web-vitals": "^0.2.4"
-  },
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "predeploy": "pnpm run build",
     "deploy": "gh-pages -d build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@steveeeie/react-page-transition": "^1.3.0",
+    "bootstrap": "^5.3.2",
+    "classnames": "^2.3.2",
+    "gh-pages": "^6.0.0",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-animated-cursor": "^2.8.1",
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.9.0",
+    "react-router-dom": "^6.11.2",
+    "react-transition-group": "^4.4.5",
+    "styled-components": "^6.0.8",
+    "typewriter-effect": "^2.20.1",
+    "web-vitals": "^3.4.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.3.9"
   }
 }
