--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ali-imran",
-  "homepage": "https://www.ialiimran.com/",
+  "homepage": "https://alialfred.github.io/portfolio/",
   "version": "0.1.0",
   "private": true,
   "type": "module",
